# forge

./: .gitignore  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release-dev.yml  release-prod.yml
scripts/: generate-updater-json.mjs  install.ps1  install.sh
src/: App.css  App.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/russh-keys-shim/: Cargo.toml
src-tauri/resources/shell-integration/: .zshrc  bash-integration.sh  bashrc  zsh-integration.zsh
src-tauri/src/: commands.rs  connection_store.rs  credentials.rs  explorer.rs  git_status.rs  known_hosts.rs  lib.rs  session.rs  shell.rs  ssh.rs  types.rs  watcher.rs
src/components/: BlockActions.tsx  BlockOverlay.test.tsx  BlockOverlay.tsx  ConnectionList.test.tsx  ConnectionList.tsx  ConnectionManager.test.tsx  ConnectionManager.tsx  DropZoneOverlay.test.tsx  DropZoneOverlay.tsx  ExplorerSidebar.tsx  FileTree.test.tsx  FileTree.tsx  FileTreeNode.tsx  HostKeyVerificationDialog.test.tsx  HostKeyVerificationDialog.tsx  InlineEditor.test.tsx  InlineEditor.tsx  NavRail.tsx  NewTabDialog.tsx  PaneContainer.test.tsx  PaneContainer.tsx  PaneDivider.tsx  PortForwardPanel.tsx  SettingsPanel.tsx  ShortcutOverlay.tsx  Sidebar.tsx  SnippetList.tsx  StatusBar.test.tsx  StatusBar.tsx  TabBar.test.tsx  TabBar.tsx  Terminal.test.tsx  Terminal.tsx  TerminalPane.test.tsx  TerminalPane.tsx  TransferPanel.tsx  UpdaterBanner.test.tsx  UpdaterBanner.tsx
src/models/: block-parser.test.ts  block-parser.ts  pane-tree.test.ts  pane-tree.ts
src/stores/: connection.test.ts  connection.ts  drag.test.ts  drag.ts  editor.test.ts  editor.ts  explorer.test.ts  explorer.ts  pane.test.ts  pane.ts  portForward.test.ts  portForward.ts  recentConnections.test.ts  recentConnections.ts  session.test.ts  session.ts  settings.ts  shell.test.ts  shell.ts  (+8 more)
(+60 files in other folders)
