[package]
name = "forge"
version = "0.1.0"
description = "Forge Terminal - A modern cross-platform terminal emulator"
authors = ["Forge Team"]
edition = "2021"

[lib]
name = "forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
libc = "0.2"

[dev-dependencies]
