[package]
name = "forge"
version = "0.1.0"
description = "Forge Terminal - A modern cross-platform terminal emulator"
authors = ["Forge Team"]
edition = "2021"

[lib]
name = "forge_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.9"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
libc = "0.2"
walkdir = "2"
# SSH/SFTP support
russh = "0.57"
russh-sftp = "2.1"
russh-keys = "0.57"

# File system operations
notify = { version = "7", features = ["macos_fsevent"] }
git2 = { version = "0.19", default-features = false, features = ["https", "ssh", "vendored-libgit2", "vendored-openssl"] }
dirs = "6"
# Async support
async-trait = "0.1"
url = "2"
# Tauri plugins
tauri-plugin-stronghold = "2"

[dev-dependencies]

[patch.crates-io]
russh-keys = { path = "crates/russh-keys-shim" }
